syncqt: always use absolute path in the generated headers

The relative path + source path can be tool long for windows

Fixes: QTBUG-120758
Pick-to: 6.5
Change-Id: I42ed4f3bbf39d31bf37a5bc76eb18f473661346b
Reviewed-by:  Alexey Edelev <alexey.edelev@qt.io>
(cherry picked from commit b4246a5c28472de3c4b6a85a3daf4a1d578894ab)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 8e424eba741f882d3fc79c97910217b5bcfd2a3b)